--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,2 +1,6 @@
+Version 0.1.1 (alpha) (2011-08-09)
+- Fix screen lock progress
+- Small fixes
+
 Version 0.1 (alpha) (2011-08-09)
 - Initial release
