--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,4 +1,8 @@
-Version 0.1.1 (alpha) (2011-08-10)
+Version 0.1.3 (alpha) (2011-08-13)
+- Add update option
+- fix some bugs
+
+Version 0.1.2 (alpha) (2011-08-10)
 - Fix installation problems (bad name of installation files)
 - improve task info dialog and task view
 
