--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,4 +1,8 @@
-Version 0.1.3 (alpha) (2011-08-13)
+Version 0.1.3.2 (alpha) (2011-08-16)
+- fixed client shutdown
+- installation improvements
+
+Version 0.1.3.1 (alpha) (2011-08-15)
 - try to downloads pgp keys from two servers
 - improvements
 
