--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.2 (alpha) (2011-08-21)
+- installation improvements
+- adds Local preferences activity (to configure client)
+
 Version 0.1.3.2 (alpha) (2011-08-16)
 - fixed client shutdown
 - installation improvements
