--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,4 +1,9 @@
-Version 0.2 (alpha) (2011-08-31)
+Version 0.2.2 (alpha) (2011-09-02)
+- add power saving option
+- add new preferences options
+- fix some bugs
+
+Version 0.2.1 (alpha) (2011-08-31)
 - small fixes
 - crash fixes on startup
 
