--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.2.4 (alpha) (2011-09-04)
+- fixed message parsing (Boinc.Lite)
+- some improvements
+
 Version 0.2.3 (alpha) (2011-09-04)
 - remove /system/bin/chmod dependency on installation
 
