--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,4 +1,7 @@
-Version 0.2.4 (alpha) (2011-09-04)
+Version 0.2.5 (alpha) (2011-09-15)
+- fix bugs on startup/shutdown client
+
+Version 0.2.4 (alpha) (2011-09-14)
 - fixed message parsing (Boinc.Lite)
 - some improvements
 
